minor style fixed for settings on mobile

--- a/ui/apps/io.ox/settings/style.less
+++ b/ui/apps/io.ox/settings/style.less
@@ -201,7 +201,9 @@
 
 
 @media (max-width: 480px), (max-device-width: 480px)  {
-
+    .vgrid-cell {
+        font-size: 15px;
+    }
     .settings-detail-pane {
         h1:first-child, h1.pane-headline:first-child {
             margin: 0 0 1em 0;
